# pr-summarizer

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  ci-local.sh
.github/: FUNDING.yml  auto-assign.yml
.github/workflows/: auto-assign.yml  ci.yml  release.yml  test.yml
docs/: USAGE.md
docs/release/: release-process.md  v1.md
src/: github.rs  joke.rs  main.rs  summarizer.rs  utils.rs
