[package]
name = "pr-summarizer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A GitHub Action that summarizes PRs and adds jokes"

[dependencies]
octocrab = "0.42.0"         # GitHub API client
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"        # JSON handling
reqwest = { version = "0.12.11", features = ["json"] }  # HTTP client
anyhow = "1.0"            # Error handling
log = "0.4"               # Logging
env_logger = "0.11.1"       # Logger implementation
regex = "1.10.1"             # Regular expressions
itertools = "0.7.7"        # Iterator utilities
dotenv = "0.15"           # Environment variable handling

[profile.release]
opt-level = 3             # Optimize for speed
lto = true                # Link-time optimization
codegen-units = 1         # More optimization
panic = "abort"           # Abort on panic in release mode
